apps/ghostfolio/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ghostfolio
spec:
  selector:
    app.kubernetes.io/name: ghostfolio
  ports:
    - port: 80
      targetPort: ghostfolio
