apps/ghostfolio/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: "ghostfolio"
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: "ghostfolio"
  policyTypes:
    - Egress
    - Ingress
  egress:
    - to:
        - podSelector: {}
      ports:
        - protocol: "TCP"
          port: 5432
        - protocol: "TCP"
          port: 6379
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
  ingress:
    - ports:
        - protocol: "TCP"
          port: "ghostfolio"
      from: []
